--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=config-default
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #sql logging in console
